Cambios en AlumnosController y appsettings

--- a/AlumnosMicorservicio/appsettings.json
+++ b/AlumnosMicorservicio/appsettings.json
@@ -1,5 +1,6 @@
 { //"Server=URIELGL;Database=AlumnosDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   "ConnectionStrings": {
+    //Actualizacion cadena de conexion a la base de datos en Somee
     "DefaultConnection": "workstation id=AlumnosDB.mssql.somee.com;packet size=4096;user id=UGL-2022_SQLLogin_1;pwd=qq3msj9tdp;data source=AlumnosDB.mssql.somee.com;persist security info=False;initial catalog=AlumnosDB"
   },
   "Logging": {
